# Path-Tracing

./: CMakeLists.txt  KD-Tree.h  Tracer.h  bitmap_image.hpp  config.h  main.cpp  main2.cpp  material.h  ray.h  scene.cpp  scene.h  timer.h  triangles.h
models/: Tor.mtl
